# whispercpp

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
whispercpp/: .gitignore  Cargo.toml  TODO.md
whispercpp-sys/: .gitignore  Cargo.toml  build.rs  whispercpp_shim.cpp  whispercpp_shim.h  wrapper.h
whispercpp-sys/src/: lib.rs
whispercpp/examples/: smoke.rs
whispercpp/src/: context.rs  error.rs  lang.rs  lib.rs  params.rs  safety_audit.rs  state.rs  sys.rs
