[workspace]
resolver = "3"
members = ["whispercpp-sys", "whispercpp"]

# `whisper.cpp/` is the upstream C++ source pulled in as a git
# submodule under `whispercpp-sys/whisper.cpp/`. Cargo's
# workspace discovery walks subdirectories looking for
# Cargo.toml; the submodule has none, so no exclude is needed —
# but we list it defensively so a future "Cargo.toml in
# whisper.cpp/" surprise doesn't pull it into the workspace.
exclude = ["whispercpp-sys/whisper.cpp"]

[workspace.package]
edition      = "2024"
rust-version = "1.95"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/findit-studio/whispercpp"
readme = "README.md"

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(tarpaulin)',
] }
